- Added JQuery and the Bootstrap JQuery scripts - Fixed the header to allow the links to appear in the drop-down on small window widths - Changed the main body width to be a little trimmer - Cleaned up the structure of the individual project pages a bit

--- a/frostillic.us-portfolio/Resources/StyleSheets/style.css
+++ b/frostillic.us-portfolio/Resources/StyleSheets/style.css
@@ -1,3 +1,4 @@
+
 footer {
 	margin-top: 6em;
 }
@@ -17,6 +18,8 @@ footer {
 	/*margin-left: 136px;*/
 }
 
+.actions { margin-top: 2em }
+
 .clear { clear: both }
 
 
@@ -24,4 +27,14 @@ footer {
 	width: 100%;
 	max-width: 1000px;
 	margin: 2em auto;
+}
+
+.urls {
+	max-width: 90%;
+}
+.urls a {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	display: block;
 }
